# semdup

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  action.yml  semdup.toml
.github/: dependabot.yml
.github/smoke/: plant.rs
.github/workflows/: ci.yml  eval.yml  semdup.yml
docs/: models.md
eval/: README.md  block-manifest.json  fetch-corpus.sh  labels.example.json  manifest.json  model-row.sh  models.tsv
eval/injected/: absuri_l1.rb  absuri_l2.rb  absuri_l3.rb  appfind_l1.py  appfind_l2.py  appfind_l3.py  backscan_l1.rs  backscan_l2.rs  backscan_l3.rs  block_patterns_reader_l1.rs  block_patterns_reader_l2.rs  block_patterns_reader_l3.rs  bracket_meta_l1.rs  bracket_meta_l2.rs  bracket_meta_l3.rs  bytesize_l1.rs  bytesize_l2.rs  bytesize_l3.rs  cachectl_l1.rb  cachectl_l2.rb  cachectl_l3.rb  camelcase_l1.cs  camelcase_l2.cs  camelcase_l3.cs  capfirst_l1.java  capfirst_l2.java  capfirst_l3.java  css_token_flatten_l1.ts  css_token_flatten_l2.ts  css_token_flatten_l3.ts  cursor_line_tracker_l1.ts  cursor_line_tracker_l2.ts  cursor_line_tracker_l3.ts  deep_value_match_l1.ts  deep_value_match_l2.ts  deep_value_match_l3.ts  didyoumean_l1.rs  didyoumean_l2.rs  didyoumean_l3.rs  dispwidth_l1.cpp  (+47 more)
scripts/: bench_scan_gpu.py  export_onnx.py  quantize_onnx.py  semdup-github-report.py
sidecar/: embedder.py
src/: baseline.rs  calibrate.rs  ci.rs  config.rs  db.rs  diff.rs  extract.rs  fetch.rs  init.rs  inject.rs  main.rs  scan.rs
src/embed/: mod.rs  onnx.rs  provider_libs.rs  sidecar.rs
