[package]
name = "semdup"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Embedding-based near-duplicate function detector for source code"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nlebedenko/semdup"
keywords = ["duplicate", "clone-detection", "lint", "embeddings"]
categories = ["development-tools", "command-line-utilities"]

[features]
default = ["onnx"]
# Built-in ONNX Runtime embedding backend (CPU). Without it, only the python
# sidecar backend is available.
onnx = ["dep:ort", "dep:tokenizers"]
# CUDA execution provider for the ONNX backend (falls back to CPU at runtime).
cuda = ["onnx", "ort/cuda"]

[dependencies]
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
ort = { version = "2.0.0-rc.10", optional = true }
tokenizers = { version = "0.21", optional = true, default-features = false, features = ["onig"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
