[package]
name = "semdup"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Embedding-based near-duplicate function detector for source code"
license = "MIT OR Apache-2.0"
repository = "https://github.com/niklebedenko/semdup"
readme = "README.md"
keywords = ["duplicate", "clone-detection", "lint", "embeddings"]
categories = ["development-tools", "command-line-utilities"]
# Keep the crate lean: eval corpora/plants and CI config aren't needed at
# install time (the eval harness is a git-checkout workflow).
exclude = [".github/", "eval/", "semdup.toml"]

[features]
default = ["onnx"]
# Built-in ONNX Runtime embedding backend (CPU) + hosted-model auto-download.
# Without it, only the python sidecar backend is available.
onnx = ["dep:ort", "dep:tokenizers", "dep:ureq"]
# CUDA execution provider for the ONNX backend (falls back to CPU at runtime).
cuda = ["onnx", "ort/cuda"]

[dependencies]
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
ureq = { version = "2", optional = true }
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
ort = { version = "2.0.0-rc.10", optional = true }
tokenizers = { version = "0.21", optional = true, default-features = false, features = ["onig"] }
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-php = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
